# NobleBooksFactory

./: .gitignore  README.md  prd.md
backend/: .env.example  package.json  pyproject.toml  requirements.txt  start.py
backend/app/: __init__.py  main.py
backend/app/agents/: agent_coordinator.py  base_agent.py  content_agent.py  research_agent.py
backend/app/api/: agents.py  books.py  health.py
backend/app/core/: config.py  websocket_manager.py
backend/app/models/: agent.py  book.py
backend/app/services/: book_generation_service.py  llm_service.py
backend/src/: server.js
backend/src/agents/content/: ContentGenerationAgent.js
backend/src/agents/editorial/: EditorialAgent.js
backend/src/agents/research/: ResearchAgent.js
backend/src/config/: llm-providers.js
backend/src/services/: llm-client.js
backend/src/test/: test-agents.js  test-structure.js
backend/src/utils/: logger.js
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: ProgressBar.tsx  StatsCard.tsx
frontend/src/pages/: Analytics.tsx  BookCreation.tsx  Dashboard.tsx  MyBooks.tsx  Publishing.tsx  Settings.tsx  TrendAnalysis.tsx
frontend/src/services/: api.ts
